# threedipa

./: .gitignore  INSTALLATION.md  README.md  build_mac.sh  build_pc.ps1  environment.yml  pyproject.toml  python.py  requirements.txt
src/threedipa/: __init__.py  config.py  generate_stimuli.py  haploscope_adjust  haploscope_adjust.py  initVariables.py  monitor_calibration.py  procedure.py  utils.py
src/threedipa/renderer/: __init__.py  haploscopeConfig.py  haploscopeRender.py  haplscope_utils.py  renderers.py  utils.py
src/threedipa/stimuli/: __init__.py  probe2D.py  stimuli.py  stimulus2D.py
src/vizlab3d.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/johnstonTemplate/: johnstonTemplate.py  parameters.txt
templates/johnstonTemplate/data/: johnston_test_1.csv  johnston_test_1.psydat  johnston_test_1_1.csv  johnston_test_1_1.psydat  johnston_test_1_2.csv  johnston_test_1_2.psydat  johnston_test_1_3.csv  johnston_test_1_3_1.csv  johnston_test_1_3_1.psydat  johnston_test_1_4.csv  johnston_test_1_4_1.psydat
templates/probeTemplate/: parameters.txt  probeTemplate.py
tests/: dotProbeTest.py  haploscopeLaserCalibration.py  probeTest.py  renderHaploscopeTest.py  renderShutterTest.py  render_test2D.py
