[project]
name = "threedipa"
version = "0.0.1"
authors = [
  { name="Jovan Kemp", email="jtk194@gmail.com" },
]
description = "Package to create 3D vision psychology experiments"
readme = "README.md"
requires-python = "==3.9.*"
license = {text = "See LICENSE file"}

dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "swig>=4.4.0",
    "scipy>=1.9.0",
    "psychopy>=2025.2.1",
]

[tool.setuptools]
packages = ["threedipa", "threedipa.renderer", "threedipa.stimuli"]
package-dir = {"" = "src"}

# Prevent setuptools from importing modules during build
[tool.setuptools.package-data]
"*" = ["*.py"]